Track the number of bad beacons received.

PR:		kern/165517

Former-commit-id: 8104e26ab150d0986dc727420cc5029ba727783d